--- a/activfi/src/EventCard.css
+++ b/activfi/src/EventCard.css
@@ -1,8 +1,10 @@
 .container {
   border-radius: 5px;
   width: 500px !important;
-  background-color: #f1f1f1 !important;
+  background-color: white !important;
   margin-top: 10px;
+  
+  box-shadow: 1px 3px #b9b9b9;
 }
 
 .title {
