--- a/activfi/src/EventCard.css
+++ b/activfi/src/EventCard.css
@@ -1,7 +1,8 @@
 .container {
   border-radius: 5px;
   width: 500px !important;
-  background-color: white !important;
+  background-color: whitesmoke !important;
+  opacity: 0.9 !important;
   margin-top: 10px;
   
   box-shadow: 1px 3px #b9b9b9;
